changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget9/trans-tables-widget9.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget9/trans-tables-widget9.component.html
@@ -53,7 +53,7 @@
                             <div class="col-auto">
                                 <!-- <button type="button" class="btn btn-outline-secondary my-2 my-sm-0"
                                     (click)="exportexcel()">download </button> -->
-                              <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" (click)="exportexcel()"  ><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span> <br>
+                              <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV" (click)="exportexcel()"  ><i class="fas fa-file-csv" style="font-size: 30px;"></i></span> <br>
 
                             </div>
                         </div>
