--- a/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget8/trans-tables-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/trans-tables/trans-tables-widget8/trans-tables-widget8.component.html
@@ -60,7 +60,7 @@
 
 
         <div class="col-auto">
-            <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" (click)="excelDownload()"  ><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span> <br>
+            <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV" (click)="excelDownload()"  ><i class="fas fa-file-csv" style="font-size: 30px;"></i></span> <br>
             <!-- Download PDF -->
           </div>
 
