changes added by tejaswini

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -1582,7 +1582,7 @@
     </div>
 
     <!-- Ubi -->
-    <div class="menu-item">
+    <div *ngIf="isUBI" class="menu-item">
       <a class="menu-link without-sub" routerLink="/ubi/ubiCredit" routerLinkActive="active">
         <span class="menu-icon">
           <app-keenicon name="switch" class="fs-2"></app-keenicon>
