--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget11/pump-tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget11/pump-tables-widget11.component.html
@@ -960,7 +960,7 @@
                             <table *ngIf="lubeCrDetails.length">
                                 <tr>
                                     <td colspan="12">
-                                        Lube Customers Sales Summary
+                                       <b> Lube Customers Sales Summary </b>
                                     </td>
                                 </tr>
                                 <tr>
@@ -1032,7 +1032,7 @@
                             <table *ngIf="advAmtDetails.length">
                                 <tr>
                                     <td colspan="12">
-                                        Advance Amt Customers Summary
+                                       <b> Advance Amt Customers Summary </b>
                                     </td>
                                 </tr>
                                 <tr>
@@ -1093,7 +1093,7 @@
                             <table *ngIf="lubeDetails.length">
                                 <tr>
                                     <td colspan="12">
-                                        Lube(Credit) Customers Sales Summary
+                                       <b> Lube(Credit) Customers Sales Summary </b>
                                     </td>
                                 </tr>
                                 <tr>
@@ -1175,7 +1175,7 @@
                             <table *ngIf="lubeDetails.length">
                                 <tr>
                                     <td colspan="12">
-                                        Lube(Cash) Customers Sales Summary
+                                       <b> Lube(Cash) Customers Sales Summary </b>
                                     </td>
                                 </tr>
                                 <tr>
