changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget11/base-tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget11/base-tables-widget11.component.html
@@ -155,14 +155,14 @@
           <table class="table table-striped">
             <thead class="">
               <tr>
-                <th style="text-align: center;">Sr.No</th>
-                <th>Date</th>
-                <th>Bill / Ref No</th>
-                <th>Vehicle No / other details</th>
-                <th>Product</th>
-                <th>Rate</th>
-                <th>Quantity</th>
-                <th>Credit Amount</th>
+                <th style="text-align: center;"><b>Sr.No</b></th>
+                <th><b>Date</b></th>
+                <th><b>Bill / Ref No</b></th>
+                <th><b>Vehicle No / other details</b></th>
+                <th><b>Product</b></th>
+                <th><b>Rate</b></th>
+                <th><b>Quantity</b></th>
+                <th><b>Credit Amount</b></th>
               </tr>
             </thead>
             <tbody>
@@ -558,14 +558,14 @@
                 <table class="child-table">
                   <thead>
                     <tr>
-                      <th class="table-head">Sr.No</th>
-                      <th class="table-head">Date</th>
-                      <th class="table-head">Description</th>
-                      <th class="table-head">Vehicle No.</th>
-                      <th class="table-head">Product|Price</th>
-                      <th class="table-head">Quantity</th>
-                      <th class="table-head">Purchase</th>
-                      <th class="table-head">Payment</th>
+                      <th class="table-head"><b>Sr.No</b></th>
+                      <th class="table-head"><b>Date</b></th>
+                      <th class="table-head"><b>Description</b></th>
+                      <th class="table-head"><b>Vehicle No.</b></th>
+                      <th class="table-head"><b>Product|Price</b></th>
+                      <th class="table-head"><b>Quantity</b></th>
+                      <th class="table-head"><b>Purchase</b></th>
+                      <th class="table-head"><b>Payment</b></th>
                     </tr>
                   </thead>
 
@@ -961,13 +961,13 @@
                 <table class="child-table">
                   <thead>
                     <tr>
-                      <th class="table-head">Sr.No</th>
-                      <th class="table-head">Date</th>
-                      <th class="table-head">Description</th>
-                      <th class="table-head">Vehicle No.</th>
-                      <th class="table-head">Product|Price</th>
-                      <th class="table-head">Quantity</th>
-                      <th class="table-head">Purchase</th>
+                      <th class="table-head"><b>Sr.No</b></th>
+                      <th class="table-head"><b>Date</b></th>
+                      <th class="table-head"><b>Description</b></th>
+                      <th class="table-head"><b>Vehicle No.</b></th>
+                      <th class="table-head"><b>Product|Price</b></th>
+                      <th class="table-head"><b>Quantity</b></th>
+                      <th class="table-head"><b>Purchase</b></th>
                     </tr>
                   </thead>
 
