--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
@@ -316,13 +316,13 @@
               <thead class="table-light">
                 <tr>
                   <th></th>
-                  <th style="text-align: left;">Previous O/s</th>
-                  <th style="text-align: left;">Cr Amount Limit</th>
-                  <th style="text-align: left;">Cr Days Limit</th>
-                  <th style="text-align: left;">Bill Nos. Set</th>
-                  <th style="text-align: left;">Mapping</th>
-                  <th style="text-align: left;">SMS</th>
-                  <th style="text-align: left;">Email</th>
+                  <th style="text-align: left;"><b>Previous O/s</b></th>
+                  <th style="text-align: left;"><b>Cr Amount Limit</b></th>
+                  <th style="text-align: left;"><b>Cr Days Limit</b></th>
+                  <th style="text-align: left;"><b>Bill Nos. Set</b></th>
+                  <th style="text-align: left;"><b>Mapping</b></th>
+                  <th style="text-align: left;"><b>SMS</b></th>
+                  <th style="text-align: left;"><b>Email</b></th>
                 </tr>
               </thead>
               <tbody>
