changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget7/base-tables-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget7/base-tables-widget7.component.html
@@ -68,7 +68,7 @@
             <th style="text-align: center"><b> Balance </b></th>
           </tr>
         </thead>
-        <tbody *ngFor="let data of dayWiseQtyData">
+        <tbody *ngFor="let data of dayWiseQtyData | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
           <tr *ngIf="data.crData.length">
             <td style="text-align: center"> {{ data.date | date:"d MMM, yyyy"}} </td>
 
