--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget14/mixed-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget14/mixed-widget14.component.html
@@ -74,19 +74,19 @@
                 <table class="table table-striped" style= "border: 1px solid black">
                     <thead style="border: 1px solid black">
                         <tr>
-                            <th style="text-align: center; border: 1px solid black;">Sr.No</th>
-                            <th style="text-align: center; border: 1px solid black;">Date</th>
-                            <th style="text-align: center; border: 1px solid black;">Product</th>
-                            <th style="text-align: center; border: 1px solid black;">Vehicle No</th>
-                            <th style="text-align: center; border: 1px solid black;">Bill / Ref No	</th>
-                            <th style="text-align: center; border: 1px solid black;">Quantity</th>
-                            <th style="text-align: center; border: 1px solid black;">Rate</th>
-                            <th style="text-align: center; border: 1px solid black;">Credit Amount</th>
-                            <th style="text-align: center; border: 1px solid black;">Total Amount</th>
+                            <th style="text-align: center; border: 1px solid black;"><b>Sr.No</b></th>
+                            <th style="text-align: center; border: 1px solid black;"><b>Date</b></th>
+                            <th style="text-align: center; border: 1px solid black;"><b>Product</b></th>
+                            <th style="text-align: center; border: 1px solid black;"><b>Vehicle No</b></th>
+                            <th style="text-align: center; border: 1px solid black;"><b>Bill / Ref No	</b></th>
+                            <th style="text-align: center; border: 1px solid black;"><b>Quantity</b></th>
+                            <th style="text-align: center; border: 1px solid black;"><b>Rate</b></th>
+                            <th style="text-align: center; border: 1px solid black;"><b>Credit Amount</b></th>
+                            <th style="text-align: center; border: 1px solid black;"><b>Total Amount</b></th>
                         </tr>
                     </thead>
                     <tbody style="border: 1px solid black" *ngFor="let data1 of array; let i = index">
-                        <td rowspan="15" style="text-align: center; border: 1px solid black;"> 
+                        <td rowspan="25" style="text-align: center; border: 1px solid black;"> 
                            <span > {{i+1}}  </span> 
                         </td>
                         <tr *ngFor="let data of data1;">
