--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget5/base-tables-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget5/base-tables-widget5.component.html
@@ -48,7 +48,7 @@
         <th style="text-align: center"><b> Balance </b></th>
       </tr>
     </thead>
-    <tbody *ngFor="let data of yearWiseData">
+    <tbody *ngFor="let data of yearWiseData | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
       <tr>
         <td style="text-align: center"> {{ data.month }} {{data.year}} </td>
         <td style="text-align: center"> <i class="fa-solid fa-indian-rupee-sign"></i>
