--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
@@ -65,7 +65,7 @@
             <th style="text-align: center"><b> Balance </b></th>
           </tr>
         </thead>
-        <tbody *ngFor="let data of yearWiseQtyData">
+        <tbody *ngFor="let data of yearWiseQtyData | paginate: { itemsPerPage: 10, currentPage: p, totalItems: total }; let i = index">
           <tr *ngIf="data.crData.length">
             <td style="text-align: center"> {{ data.month }} {{data.year}} </td>
             <td colspan="3">
