--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html
   PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="https://www.w3.org/1999/xhtml">
@@ -14,104 +12,108 @@
   <!--<link rel='stylesheet' type='text/css' href='../../../../../../assets/EditableInvoice/css/print1.css' media="print" />-->
   <!-- <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/jquery-1.3.2.min1.js'></script> -->
   <!-- <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/example1.js'></script > -->
-    <style>
-      table {
-        /* //border: 1px solid black; */
-        width: 100%;
-        text-align: center;
-    
-        th {
-          border: 1px solid black;
-        }
-    
-        tr td {
-          border: 1px solid black;
-        }
-      }
-    
+  <style>
+    table {
+      /* //border: 1px solid black; */
+      width: 100%;
+      text-align: center;
+
       th {
         border: 1px solid black;
       }
-    
+
       tr td {
         border: 1px solid black;
       }
-    
-      #watermark {
-        position: absolute;
-        bottom: 105px;
-        opacity: 0.2;
-        font-size: 120px;
-        text-align: center;
-        color: red;
-        text-shadow: 10px 2px black;
-        /* -webkit-transform: rotate(-30deg); */
-      }
-    
-      #watermark1 {
-        position: absolute;
-        bottom: 170px;
-        opacity: 0.2;
-        font-size: 120px;
-        text-align: center;
-        color: red;
-        text-shadow: 10px 2px black;
-        /* -webkit-transform: rotate(-42deg); */
-      }
-    
-      h1,
-      .h1 {
-        font-size: 4.125rem;
-      }
-    
-      .logo {
-        width: 30%;
-      }
-    
-      .A4 {
-        background: white;
-        width: 23cm;
-        height: 40.7cm;
+    }
+
+    th {
+      border: 1px solid black;
+    }
+
+    tr td {
+      border: 1px solid black;
+    }
+
+    #watermark {
+      position: absolute;
+      bottom: 105px;
+      opacity: 0.2;
+      font-size: 120px;
+      text-align: center;
+      color: red;
+      text-shadow: 10px 2px black;
+      /* -webkit-transform: rotate(-30deg); */
+    }
+
+    #watermark1 {
+      position: absolute;
+      bottom: 170px;
+      opacity: 0.2;
+      font-size: 120px;
+      text-align: center;
+      color: red;
+      text-shadow: 10px 2px black;
+      /* -webkit-transform: rotate(-42deg); */
+    }
+
+    h1,
+    .h1 {
+      font-size: 4.125rem;
+    }
+
+    .logo {
+      width: 30%;
+    }
+
+    .A4 {
+      background: white;
+      width: 23cm;
+      height: 40.7cm;
+      display: block;
+      margin: 0 auto;
+      padding: 1px 1px;
+      margin-bottom: 0.5cm;
+      box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+
+      box-sizing: border-box;
+      font-size: 12pt;
+      /* //line-height:normal; */
+    }
+
+    @media print {
+      .page-break {
         display: block;
-        margin: 0 auto;
-        padding: 1px 1px;
-        margin-bottom: 0.5cm;
-        box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
-    
-        box-sizing: border-box;
-        font-size: 12pt;
-        /* //line-height:normal; */
+        page-break-before: always;
+
+        size: A4 portrait;
       }
-    
-      @media print {
-        .page-break {
-          display: block;
-          page-break-before: always;
-        
-        size: A4 portrait;}
+    }
+
+    @media print {
+      body {
+        margin: 0;
+        padding: 0;
+        /* -webkit-print-color-adjust: exact; */
       }
-      
-      @media print {
-        body {
-          margin: 0;
-          padding: 0;
-          /* -webkit-print-color-adjust: exact; */
-        }
-        .A4 {
-          box-shadow: none;
-          margin: 0;
-          width: auto;
-          height: auto;
-        }
-        .noprint {
-          display: none;
-        }
-        .print {
-          display: block;
-        }
+
+      .A4 {
+        box-shadow: none;
+        margin: 0;
+        width: auto;
+        height: auto;
       }
-    </style>
-    
+
+      .noprint {
+        display: none;
+      }
+
+      .print {
+        display: block;
+      }
+    }
+  </style>
+
 </head>
 
 <!-- <body id="contentToConvert" > -->
@@ -132,8 +134,11 @@
                   routerLink="/credit/AddLubeTaxGstSale"> Back </button>
               </div>
               <div class="col-md-1">
-                &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
-                    class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
+                <!-- &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay"
+                  [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i class="fa fa-print" aria-hidden="true"></i>
+                  &nbsp;</button> -->
+
+                <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>Print </button>
               </div>
             </div>
             <br>
@@ -157,8 +162,8 @@
 
                   <div class="row" style="text-align: center;align-items: center;">
                     <div class="col-md-3" style="text-align: left;">
-                            <b> Mobile:</b> {{dealerMobile}}
-                        </div>
+                      <b> Mobile:</b> {{dealerMobile}}
+                    </div>
                     <div class="col-md-12" style="text-align: center;">
                       <b style="font-size: 12px;"> {{brandName}} petrol pump</b>
                     </div>
@@ -264,9 +269,11 @@
                         aria-hidden="true"></i> &nbsp;</button>
             </div> -->
               <div class="col-md-1">
-                <!-- <button printSectionId="sanjay" ngxPrint>print</button>  -->
-                &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay" [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i
-                    class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
+                <!-- &nbsp; <button class="noprint" style="font-size: medium;" printSectionId="sanjay"
+                  [useExistingCss]="true" ngxPrint> &nbsp;&nbsp;<i class="fa fa-print" aria-hidden="true"></i>
+                  &nbsp;</button> -->
+                  
+                <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>Print </button>
               </div>
             </div>
             <br>
@@ -438,14 +445,16 @@
                 <!-- <br> -->
               </div>
               <div class="col-md-1">
-                &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
-                    class="fa fa-print" aria-hidden="true"></i> &nbsp;</button>
+                <!-- &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
+                    class="fa fa-print" aria-hidden="true"></i> &nbsp;</button> -->
+                    
+                <button class="btn btn-success" printSectionId="sanjay" [useExistingCss]="true" ngxPrint>Print </button>
               </div>
               <!-- <div class="col-md-1">          
 
             </div> -->
             </div>
-            <br>
+            <br><br><br>
 
             <div id="sanjay">
               <div class="row">
